@@ -1,3 +1,6 @@
+2000-05-17  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
+	* usecode.cc: defined __STRING if not yet defined (e.g. in mingw32)
+
 2000-05-16  Tristan Tarrant  <tarrant_tristan@emc.com>
 
 	* gamewin.cc: Load correct palettes for intro. Implement palette fade 
